Fixed the about UL
Noticed  that the bullet points were not centered with the rest of the list.  Fixed that by adding list-style-position: inside; to the ul .about class.  CSS and HTML is the pits.

--- a/styles.css
+++ b/styles.css
@@ -115,10 +115,15 @@ section ul {
     padding: 0;
 }
  /* About class */
+.about ul {
+    text-align: center;
+    list-style-position: inside;
+}
+
 .about ul li {
     font-size: 1.2em;
     font-weight: bold;
-    list-style-type: disc;
+    list-style-type: circle;
 }
 
 section ul li {
